[workspace]

[package]
name = "watcher"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.0"
chrono = "0.4"
hex = "0.4"
http = "0.2"
hyper = { version = "0.14", default-features = false, features = ["client", "http1", "http2", "server", "stream"] }
once_cell = "1.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "=1.15.0", features = ["net", "io-util", "sync", "rt", "rt-multi-thread"] }
crossbeam-channel = "0.4"
pool = { path = "../pool" }

native-tls = { git = "https://github.com/AdrianCX/rust-native-tls", branch = "acruceru/rust-mbedtls" }
tokio-native-tls = { git = "https://github.com/AdrianCX/tls", branch = "acruceru/rust-mbedtls" }
mbedtls = { git = "https://github.com/fortanix/rust-mbedtls", features = ["rdrand", "pkcs12", "std", "pkcs12_rc2", "legacy_protocols"], branch = "acruceru/native-tls-fixes" }

[package.metadata.fortanix-sgx]
threads=16
heap-size=0x60000000
stack-size=0x40000

[patch.crates-io]
mio = { git = "https://github.com/mzohreva/mio", branch = "mz/sgx-port-0.7.6" }
tokio = { git = "https://github.com/fortanix/tokio.git", branch = "raoul/tokio-1.15.0-sgx" }
